wikijs/skj/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skj
  namespace: wikijs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    instance: skj
