wikijs/skj/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skj
  namespace: wikijs
  labels:
    instance: skj
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: "skj.wiki"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skj
                port:
                  number: 80
  tls:
    - hosts:
        - skj.wiki
      secretName: skj-wiki-cert
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: skj-ext
#  namespace: wikijs
#  labels:
#    instance: skj
#spec:
#  ingressClassName: "nginx-external"
#  rules:
#    - host: "skj.wiki"
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: skj
#                port:
#                  number: 80
#  tls:
#    - hosts:
#        - skj.wiki
#      secretName: skj-wiki-cert
